kubevirt/cdi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdi-uploadproxy
  namespace: cdi
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: cdi-uploadproxy.sparks.codes
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: cdi-uploadproxy
                port:
                  number: 443
  tls:
    - hosts:
        - cdi-uploadproxy.sparks.codes
      secretName: acme-crt-secret-sparks-codes
